feat: placehoders fix: misc fixes chore: refactored a good bit