@@ -32,41 +32,39 @@ public class PlayerListener implements Listener {
 
     @EventHandler
     public void onGameModeChange(PlayerGameModeChangeEvent event) {
-        if (event.getNewGameMode() == GameMode.SPECTATOR) {
-            Player player = event.getPlayer();
-            GamePlayer gamePlayer = plugin.getGameManager().getGamePlayer(player);
-            if (gamePlayer != null && gamePlayer.getTeam() != null) {
-                Team team = gamePlayer.getTeam();
-                for (Player teamMember : plugin.getServer().getOnlinePlayers()) {
-                    GamePlayer teamMemberGamePlayer = plugin.getGameManager().getGamePlayer(teamMember);
-                    if (teamMemberGamePlayer != null && teamMemberGamePlayer.getTeam() == team && teamMember != player) {
-                        player.setSpectatorTarget(teamMember);
-                        return;
-                    }
-                }
-            }
+        if(event.getNewGameMode() != GameMode.SPECTATOR) return;
+
+        Player player = event.getPlayer();
+        GamePlayer gamePlayer = plugin.getGameManager().getGamePlayer(player);
+        if (gamePlayer == null || gamePlayer.getTeam() == null) return;
+
+        Team team = gamePlayer.getTeam();
+        for (Player teamMember : plugin.getServer().getOnlinePlayers()) {
+            GamePlayer teamMemberGamePlayer = plugin.getGameManager().getGamePlayer(teamMember);
+            if (teamMemberGamePlayer == null || teamMemberGamePlayer.getTeam() != team || teamMember == player) continue;
+
+            player.setSpectatorTarget(teamMember);
+            return;
         }
     }
 
     @EventHandler
     public void onSpectatorTeleport(PlayerTeleportEvent event) {
-        if (event.getPlayer().getGameMode() == GameMode.SPECTATOR && event.getCause() == PlayerTeleportEvent.TeleportCause.SPECTATE) {
-            Player spectator = event.getPlayer();
-            if (event.getTo().getWorld().getEntities().isEmpty()) return;
-            if (!(event.getTo().getWorld().getEntities().get(0) instanceof Player)) return;
+        if(event.getCause() != PlayerTeleportEvent.TeleportCause.SPECTATE) return;
+        if(event.getPlayer().getGameMode() != GameMode.SPECTATOR) return;
 
-            Player target = (Player) event.getTo().getWorld().getEntities().get(0);
+        Player spectator = event.getPlayer();
+        if (event.getTo().getWorld().getEntities().isEmpty()) return;
+        if (!(event.getTo().getWorld().getEntities().getFirst() instanceof Player target)) return;
 
+        GamePlayer spectatorGamePlayer = plugin.getGameManager().getGamePlayer(spectator);
+        GamePlayer targetGamePlayer = plugin.getGameManager().getGamePlayer(target);
 
-            GamePlayer spectatorGamePlayer = plugin.getGameManager().getGamePlayer(spectator);
-            GamePlayer targetGamePlayer = plugin.getGameManager().getGamePlayer(target);
+        if(spectatorGamePlayer == null || targetGamePlayer == null) return;
+        if(spectatorGamePlayer.getTeam() == null || targetGamePlayer.getTeam() == null) return;
+        if(spectatorGamePlayer.getTeam() == targetGamePlayer.getTeam()) return;
 
-            if (spectatorGamePlayer != null && spectatorGamePlayer.getTeam() != null &&
-                targetGamePlayer != null && targetGamePlayer.getTeam() != null &&
-                spectatorGamePlayer.getTeam() != targetGamePlayer.getTeam()) {
-                event.setCancelled(true);
-                spectator.sendMessage("You can only spectate your own team!");
-            }
-        }
+        event.setCancelled(true);
+        spectator.sendMessage("You can only spectate your own team!");
     }
 }
